k8s/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.17.0 ()
  creationTimestamp: null
  labels:
    service: web
    app: buoy-barn
  name: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: web
        app: buoy-barn
    spec:
      containers:
        - args:
            - uwsgi
            - --module=buoy_barn.wsgi:application
            - --master
            - --pidfile=/tmp/project-master.pid
            - --http
            - :8080
            - --uid=1000
            - --gid=2000
            - --max-requests=5000
            - --vacuum
            - --processes
            - "4"
          image: web
          name: web
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
