k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buoy-barn-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: buoy-barn
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 8080
